changing register text

--- a/register.html
+++ b/register.html
@@ -18,7 +18,7 @@
 	</header>
 	<section>
 		<h2>Register</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		<p>Please Sign Up using form below. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. </p>
 		<form method="GET">
 		First Name: <input type="text" name="firstname"><br>
